--- a/src/laporan/PrintKeuanganKeluar.form
+++ b/src/laporan/PrintKeuanganKeluar.form
@@ -122,7 +122,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="Print Data Keuangan Masuk"/>
+                <Property name="text" type="java.lang.String" value="Print Data Keuangan Keluar"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
