--- a/src/laporan/report_keuanganKeluar.jrxml
+++ b/src/laporan/report_keuanganKeluar.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="383d0601-c62d-4865-b5c6-584c58f4e621">
-	<property name="ireport.zoom" value="1.6105100000000652"/>
-	<property name="ireport.x" value="395"/>
-	<property name="ireport.y" value="278"/>
+	<property name="ireport.zoom" value="0.7513148009016081"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
 	<style name="Column header" forecolor="#666666" fontName="Times New Roman" fontSize="14" isBold="true" pdfFontName="Times-Roman"/>
@@ -75,10 +75,6 @@ WHERE data_keuangankeluar.`tanggal` BETWEEN $P{awal} AND $P{akhir}]]>
 				</textElement>
 				<text><![CDATA[LAPORAN DATA KEUANGAN KELUAR]]></text>
 			</staticText>
-			<image onErrorType="Icon">
-				<reportElement uuid="448df30b-e000-425f-ad5d-545bbf4d6f39" x="29" y="7" width="133" height="104"/>
-				<imageExpression><![CDATA["C:\\Users\\albin\\Documents\\NetBeansProjects\\aplikasi-sidoma\\src\\img\\logo-pddm.png"]]></imageExpression>
-			</image>
 			<staticText>
 				<reportElement uuid="acef31af-c27a-4486-9a6a-3ab4a84efea4" style="SubTitle" mode="Transparent" x="182" y="60" width="473" height="20" forecolor="#000000" backcolor="#2D2302"/>
 				<box topPadding="4" leftPadding="4" bottomPadding="4" rightPadding="4"/>
@@ -101,6 +97,10 @@ WHERE data_keuangankeluar.`tanggal` BETWEEN $P{awal} AND $P{akhir}]]>
 				</textElement>
 				<text><![CDATA[PERSAUDARAAN DONOR DARAH MAJALAYA]]></text>
 			</staticText>
+			<image>
+				<reportElement uuid="2fc25b18-694a-4159-8e1a-54a4b5a5d161" x="59" y="8" width="99" height="106"/>
+				<imageExpression><![CDATA["C:\\Users\\albin\\Documents\\aplikasi-sidoma\\src\\img\\logo-pddm.png"]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<pageHeader>
